clap_derive/tests/ui/subcommand_on_struct.stderr
error: `#[derive(Subcommand)]` only supports enums
 --> $DIR/subcommand_on_struct.rs:3:10
  |
3 | #[derive(Subcommand, Debug)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Subcommand` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0046]: not all trait items implemented, missing: `has_subcommand`
 --> $DIR/subcommand_on_struct.rs:3:10
  |
3 | #[derive(Subcommand, Debug)]
  |          ^^^^^^^^^^ missing `has_subcommand` in implementation
  |
  = note: this error originates in the derive macro `Subcommand` (in Nightly builds, run with -Z macro-backtrace for more info)
  = help: implement the missing item: `fn has_subcommand(_: &str) -> bool { todo!() }`
